--- a/Common.WP8/Common.WP8.csproj
+++ b/Common.WP8/Common.WP8.csproj
@@ -133,6 +133,7 @@
     <Content Include="Assets\Icons\dark\appbar.control.play.png" />
     <Content Include="Assets\Icons\dark\appbar.coursera.png" />
     <Content Include="Assets\Icons\dark\appbar.delete.png" />
+    <Content Include="Assets\Icons\dark\appbar.download.list.png" />
     <Content Include="Assets\Icons\dark\appbar.download.png" />
     <Content Include="Assets\Icons\dark\appbar.email.hardedge.png" />
     <Content Include="Assets\Icons\dark\appbar.filter.clear.png">
